# raylib-bindings

./: .gitignore  .gitmodules  README.md  build.py  compile_flags.txt  streamlit_app.py
.github/workflows/: main.yml
output/: CMakeLists.txt  main.cpp  main.py  pyrightconfig.json  raylibw.cpp
output/typings/: raylib.pyi
pkpy_bindings/: __init__.py  builder.py  schema.py  templates.py  utils.py
raylib/parser/output/: raylib_api.json
